@@ -2,9 +2,11 @@ DIST upkern-2.0.11.tar.bz2 9820 RMD160 025d799d672ee4cb0b48ae7d4a9f1742a6169fd0 
 DIST upkern-3.1.2.tar.bz2 17055 RMD160 bca389ef745dbaeb157c6d5f0ba208cf2e5f3aaf SHA1 2efbd34186e892294842480aedaad7c80676f966 SHA256 e976630f6d7a786ce5480432b544282c9b92a46503806bd6286a6f9f4ff685d0
 DIST upkern-3.1.3.tar.bz2 18132 RMD160 79fca4514bfbbf1bad25e712410882b280c1ad65 SHA1 6fd3c47f88b722e5481406d9048196fb851c23b3 SHA256 636e61b89e43e5fbf87915fb56006a045dbdac2efb52533f2a55a083b776731c
 DIST upkern-3.1.4.tar.bz2 18175 RMD160 7dd4d980128392762b090f44de0eee9ec4291e11 SHA1 a6783997a99b04673ad799b632f54824fcddd3e4 SHA256 ef0f36e69cd8bab65f32936d05ecc80325ae6dcd9e177c6bf6702600def9723f
+DIST upkern-3.1.5.tar.bz2 18151 RMD160 a912354a90319851d1d5ab126e149d369ec26673 SHA1 83b143b41437d7881fab602f8e49cc87193f439b SHA256 2dc168cf814b3d0153e718e8c35ca74fd6eaa0bcfb118cdb30df4fb92eaf38b9
 EBUILD upkern-2.0.11-r1.ebuild 664 RMD160 3334f42bbd16388fd7c27583d4ee6cd3bca47734 SHA1 f720089a63e7342613c047f7b2ea9eaa0f546365 SHA256 5dd696f668b3a33decf03b4473a88a7b2f4a7b875fd6a90aa763f21e7eb4fa3f
 EBUILD upkern-3.1.2.ebuild 734 RMD160 7ea7276a75bc8ad54055bb9eba262c3c6e17d672 SHA1 86b71cda3068922dc46eba6fdd2daf412f2784e7 SHA256 ee60e2bec35c0aacd86628984252af272e5d83f38763d3a13d9d895659e12be2
 EBUILD upkern-3.1.3.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
 EBUILD upkern-3.1.4.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
-MISC ChangeLog 1104 RMD160 5d38c32d00d2abd07d9efc651bafecc1456dc2e5 SHA1 4ae23af805659d942d876b450bb3dee2c8f419d2 SHA256 98c6a1595960ad705c9c5b4fdb2b025a461fd7481719327750a2e48e5c94ca1b
+EBUILD upkern-3.1.5.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
+MISC ChangeLog 1215 RMD160 d50f22684f6cb0c67196086c4bfcda4236890b80 SHA1 d42148069b63eaf728e45be9bc2dd9f796a9b7e0 SHA256 c2a7e6370620de6f0a5ff472aa4d0a99b9ad86fbf32ecf0174d577c4f2cc2340
 MISC metadata.xml 405 RMD160 a97224d51d49407236780494c188ecd441fd919c SHA1 3d9c627583480affd484ac0b1812c75078c2d27f SHA256 cd20665d6d4bcbf01de020e45ea7268c9f8149d179f64228ac18113de0b533f7
